# api.go
@@ -16,5 +16,11 @@ func StartApi() {
 	r.PUT("/conf/:id", handlers.UpdateConf)
 	r.GET("/conf/:id", handlers.DetailConf)
 	r.DELETE("/conf/:id", handlers.RemoveConf)
+
+	r.POST("/start/:id", handlers.Start)
+	r.POST("/stop/:id", handlers.Stop)
+
+	r.GET("/stat/", handlers.Stat)
+
 	r.Run("0.0.0.0:8179") // listen and serve on 0.0.0.0:8080
 }
