# docs/swagger/swagger.yaml
@@ -159,4 +159,55 @@ paths:
           schema:
             type: string
       summary: UpdateConf
+  /end/{id}:
+    post:
+      consumes:
+      - application/json
+      description: End
+      parameters:
+      - description: Some ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
+      summary: End
+  /start/{id}:
+    post:
+      consumes:
+      - application/json
+      description: Start
+      parameters:
+      - description: Some ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
+      summary: Start
+  /stat:
+    get:
+      consumes:
+      - application/json
+      description: stat
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
+      summary: stat
 swagger: "2.0"
